fix icon width in sidebar to reduce flicker

--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -230,6 +230,11 @@ header {
         }
     }
 
+    i:before {
+        display: inline-block;
+        width: 1em;
+    }
+
     .toctree-l1 {
         padding-bottom: $o-padding-xs;
 
